<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModelComments"
            type="com.globalhiddenodds.androidtestzemoga.ui.viewmodel.GetCommentsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context="com.globalhiddenodds.androidtestzemoga.ui.fragments.DetailFragment">

        <TextView
            android:id="@+id/lblDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/fragment_horizontal_margin"
            android:fontFamily="@font/roboto_bold"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:text="@string/lbl_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fragment_horizontal_margin"
            android:fontFamily="@font/roboto_bold"
            android:gravity="start|top"
            android:textColor="@color/colorDarkGray"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblDescription"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/lblUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/fragment_horizontal_margin"
            android:fontFamily="@font/roboto_bold"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:text="@string/lbl_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDescription" />

        <TextView
            android:id="@+id/lblName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/fragment_horizontal_margin"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/lbl_name"
            android:textAlignment="textStart"
            android:textColor="@color/colorDarkGray"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblUser"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            android:fontFamily="@font/roboto_bold"
            android:textAlignment="textStart"
            android:textColor="@color/colorDarkGray"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/lblName"
            app:layout_constraintTop_toTopOf="@+id/lblName"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/fragment_horizontal_margin"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/lbl_email"
            android:textAlignment="textStart"
            android:textColor="@color/colorDarkGray"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblName"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            android:fontFamily="@font/roboto_bold"
            android:textAlignment="textStart"
            android:textColor="@color/colorDarkGray"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/lblEmail"
            app:layout_constraintTop_toTopOf="@+id/lblEmail"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/lblPhone"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/fragment_horizontal_margin"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/lbl_phone"
            android:textAlignment="textStart"
            android:textColor="@color/colorDarkGray"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblEmail"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            android:fontFamily="@font/roboto_bold"
            android:textAlignment="textStart"
            android:textColor="@color/colorDarkGray"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/lblPhone"
            app:layout_constraintTop_toTopOf="@+id/lblPhone"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/lblWebsite"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/fragment_horizontal_margin"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/lbl_website"
            android:textAlignment="textStart"
            android:textColor="@color/colorDarkGray"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblPhone"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txtWebsite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            android:fontFamily="@font/roboto_bold"
            android:textAlignment="textStart"
            android:textColor="@color/colorDarkGray"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/lblWebsite"
            app:layout_constraintTop_toTopOf="@+id/lblWebsite"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/lblComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/fragment_horizontal_margin"
            android:background="@drawable/rounded_content"
            android:fontFamily="@font/roboto_bold"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:text="@string/lbl_comments"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtWebsite" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_comments"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            android:layout_marginBottom="8dp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblComments"
            app:listComment="@{viewModelComments.listComment}"
            tools:itemCount="16"
            tools:listitem="@layout/text_row_item" />

        <ImageView
            android:id="@+id/iv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lbl_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:status="@{viewModelComments.status.ordinal()}"
            tools:ignore="ImageContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
